account/k8sconfig/account-service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    service: account-service
  name: account-service
spec: 
  ports: 
    - 
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector: 
    app: account-service
  type: NodePort
